FSFO Support for Release Update (#589)
* Allow Deinstall of 19.24 Software

* Allow 19.27 as a patching option

* Remove redundant code

* Remove obsolete script

* Fix typo

* Debug

* Commit changes made by code formatters

* Get the application name

* Use bash for string manipulation

* Substitution failure

* Avoid coercing string to integer as Ansible really does not like that

* More debug

* Commit changes made by code formatters

* Use intermediate value to avoid templating issue

* Commit changes made by code formatters

* Debug

* Use integer conversion in when: only

* Commit changes made by code formatters

* Debug

* Remove redundant check

* Link HA Build Role (Used to Enable FSFO)

* Debug

* Put HA Role where it can be found

* Avoid overwriting config roles

* Typo

* Specify database type

* Add verbose output flags

* Support Verbose Mode

* Debug

* Debug

* Use toggle code to reenable FSFO

* Commit changes made by code formatters

* Remove delegation

* Commit changes made by code formatters

* Debug

* debug

* More debug

* Gather FQDN

* Commit changes made by code formatters

* Use valid subset

* More debug

* Commit changes made by code formatters

* debug

* Commit changes made by code formatters

* Use inventory hostname

* debug

* Commit changes made by code formatters

* typo

* Commit changes made by code formatters

* Use primary host group

* Remove debug

* Remove obsolete code

* Add Debug

* More debug

* Default Primary Host if not set

* Handle multiple hosts in CSV when defining host list variable

* Closing parenthesis

* Remove debug

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/oracle-db-release-update.yml
+++ b/.github/workflows/oracle-db-release-update.yml
@@ -115,7 +115,10 @@ jobs:
         id: prepareinventorynames
         shell: bash
         run: |
-          hosts="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')_${{ github.event.inputs.TargetHost }}"
+          # We can include more than 1 host in the list of hosts, so ensure each one in the comma-separated list
+          # gets prefixed with the entire environment name
+          host_prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')_"
+          hosts=$(echo ${{ github.event.inputs.TargetHost }} | awk -v p="$host_prefix" 'BEGIN{FS=OFS=","};{for(i=1;i<=NF;i++)$i=p $i};1')
           echo "hosts=${hosts}" >> $GITHUB_OUTPUT
           echo "application=$(echo ${{ github.event.inputs.TargetHost }} | sed 's/_.*//')" >> $GITHUB_OUTPUT
 
