--- a/.github/workflows/delius-db-pdm-uplift.yml
+++ b/.github/workflows/delius-db-pdm-uplift.yml
@@ -60,7 +60,9 @@ jobs:
             playbooks/block_sessions
             playbooks/oem_blackout
             playbooks/oracle_restore_points
+            playbooks/oracle_password_rotation
             playbooks/ansible.cfg
+            common/*
           path: operations
           ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
           fetch-depth: 0
