--- a/playbooks/delius_db_uplift/playbook.yml
+++ b/playbooks/delius_db_uplift/playbook.yml
@@ -1,26 +1,26 @@
-- name: Disable Oracle OEM Alerts
-  import_playbook: ../oem_blackout/playbook.yml
-  vars:
-    target: "{{ target_hosts }}"
-    blackout: "UPLIFT"
-    object_type: all
-    action: start
-    duration: 03:00
+# - name: Disable Oracle OEM Alerts
+#   import_playbook: ../oem_blackout/playbook.yml
+#   vars:
+#     target: "{{ target_hosts }}"
+#     blackout: "UPLIFT"
+#     object_type: all
+#     action: start
+#     duration: 03:00
 
-- name: Block connections to primary database
-  import_playbook: ../block_sessions/playbook.yml
-  vars:
-    target_host: delius_primarydb
-    action: block
+# - name: Block connections to primary database
+#   import_playbook: ../block_sessions/playbook.yml
+#   vars:
+#     target_host: delius_primarydb
+#     action: block
 
-- name: Create restore point
-  import_playbook: ../oracle_restore_points/playbook.yml
-  when:
-    - create_restore_point | bool
-  vars:
-    target_dbs: "{{ target_hosts }}"
-    required_action: "Create Restore Point"
-    restore_point_name: "UPLIFT"
+# - name: Create restore point
+#   import_playbook: ../oracle_restore_points/playbook.yml
+#   when:
+#     - create_restore_point | bool
+#   vars:
+#     target_dbs: "{{ target_hosts }}"
+#     required_action: "Create Restore Point"
+#     restore_point_name: "UPLIFT"
 
 - name: Uplift Delius Database
   hosts: "{{ target_hosts }}"
@@ -109,16 +109,16 @@
           register: update_read_only_role
           changed_when: update_read_only_role.stdout | int > 0
 
-- name: Unblock connections to primary database
-  import_playbook: ../block_sessions/playbook.yml
-  vars:
-    target_host: delius_primarydb
-    action: unblock
+# - name: Unblock connections to primary database
+#   import_playbook: ../block_sessions/playbook.yml
+#   vars:
+#     target_host: delius_primarydb
+#     action: unblock
 
-- name: Re-enable Oracle OEM alerts
-  import_playbook: ../oem_blackout/playbook.yml
-  vars:
-    target: "{{ target_hosts }}"
+# - name: Re-enable Oracle OEM alerts
+#   import_playbook: ../oem_blackout/playbook.yml
+#   vars:
+#     target: "{{ target_hosts }}"
     object_type: all
     action: stop
     blackout: "UPLIFT"
