User types supported for MIS are DBA and RO only.

--- a/.github/workflows/oracle-db-mis-configuration-artefacts.yml
+++ b/.github/workflows/oracle-db-mis-configuration-artefacts.yml
@@ -53,7 +53,7 @@ on:
           - "yes"
           - "no"
       DeployUsers:
-        description: "Create MIS database users? (DBA)"
+        description: "Create MIS database users? (DBA or RO only)"
         type: choice
         default: "no"
         options: 
