--- a/.github/workflows/oracle-db-mis-configuration-artefacts.yml
+++ b/.github/workflows/oracle-db-mis-configuration-artefacts.yml
@@ -53,7 +53,7 @@ on:
           - "yes"
           - "no"
       DeployUsers:
-        description: "Create MIS database users? (DBA)"
+        description: "Create MIS database users? (DBA or RO only)"
         type: choice
         default: "no"
         options: 
@@ -170,5 +170,6 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           ansible-playbook operations/playbooks/delius-artefacts-playbook.yml -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e hosts=${{ steps.prepareinventorynames.outputs.TargetHost }} \
-          -e deploy_users=${{ github.event.inputs.DeployUsers }}
+          -e deploy_users=${{ github.event.inputs.DeployUsers }} \
+          -e application=mis
           
