--- a/playbooks/oracle_duplicate/rman-pre-duplicate.yml
+++ b/playbooks/oracle_duplicate/rman-pre-duplicate.yml
@@ -38,8 +38,9 @@
           include_tasks: "{{ playbook_dir }}/../delius_users/playbook.yml"
           vars:
             action_type: "store"
+            application_type: "{{ duplicate_target | regex_replace('_.*_(delius|mis)_primarydb','\\1') }}"
           when:
-            - duplicate_target | regex_search('.*_delius_primarydb')
+            - duplicate_target | regex_search('.*_(delius|mis)_primarydb')
 
         - name: Export Automatic Workload Repository (AWR)
           include_tasks: ../awr_export/playbook.yml
