Handle missing remote tables in MIS views

--- a/playbooks/delius_users/playbook.yml
+++ b/playbooks/delius_users/playbook.yml
@@ -75,6 +75,11 @@
         
         r3    c3%rowtype;
 
+        -- In MIS some views may be invalid as they refer to tables over database
+        -- links which do not exist.  Handle this case of exceptions by ignoring them.
+        table_does_not_exist exception;
+        pragma               exception_init(table_does_not_exist,-942);
+
       begin
 
         open c3;
@@ -92,7 +97,13 @@
         loop
           l_command := 'grant select on '||r1.owner||'.'||r1.nam||' to '||v_role;
           DBMS_OUTPUT.put_line(l_command);
-          EXECUTE IMMEDIATE l_command;
+          begin
+              EXECUTE IMMEDIATE l_command;
+          exception
+              when table_does_not_exist
+              then 
+                null; -- Ignore missing remote tables using database links
+          end;
           DBMS_SESSION.sleep(0.5);  -- Avoid monopolising the library cache
         end loop;
 
