--- a/.github/workflows/oracle-db-oem-blackout.yml
+++ b/.github/workflows/oracle-db-oem-blackout.yml
@@ -111,6 +111,8 @@ jobs:
           sparse-checkout-cone-mode: false
           sparse-checkout: |
               playbooks/oem_blackout
+              common/tasks/emcli_login.yml
+              common/tasks/get_facts.yml
               playbooks/ansible.cfg
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
