--- a/.github/workflows/oracle-db-oem-blackout.yml
+++ b/.github/workflows/oracle-db-oem-blackout.yml
@@ -111,7 +111,7 @@ jobs:
           sparse-checkout-cone-mode: false
           sparse-checkout: |
               playbooks/oem_blackout
-              common/tasks
+              common
               playbooks/ansible.cfg
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
