--- a/playbooks/delius_db_uplift/playbook.yml
+++ b/playbooks/delius_db_uplift/playbook.yml
@@ -13,14 +13,14 @@
 #     target_host: delius_primarydb
 #     action: block
 
-# - name: Create restore point
-#   import_playbook: ../oracle_restore_points/playbook.yml
-#   when:
-#     - create_restore_point | bool
-#   vars:
-#     target_dbs: "{{ target_hosts }}"
-#     required_action: "Create Restore Point"
-#     restore_point_name: "UPLIFT"
+- name: Create restore point
+  import_playbook: ../oracle_restore_points/playbook.yml
+  when:
+    - create_restore_point | bool
+  vars:
+    target_dbs: "{{ target_hosts }}"
+    required_action: "Create Restore Point"
+    restore_point_name: "UPLIFT-testing"
 
 - name: Uplift Delius Database
   hosts: "{{ target_hosts }}"
