--- a/.github/workflows/delius-db-pdm-uplift.yml
+++ b/.github/workflows/delius-db-pdm-uplift.yml
@@ -17,6 +17,14 @@ on:
         description: "NDelius version to uplift to"
         required: true
         type: string
+      CreateRestorePoint:
+        description: "Create a Database restore point?"
+        required: true
+        type: choice
+        options:
+          - "Yes"
+          - "No"
+        default: "No"
       SourceCodeVersion:
         description: "Source version for the hmpps-delius-operation-automation. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
@@ -104,5 +112,6 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           $command -vvv -i $inventory -e target_hosts=${{ steps.definetargets.outputs.primary_db_host }} \
           -e ndelius_version=${{ github.event.inputs.Version }} \
+          -e create_restore_point=${{ github.event.inputs.CreateRestorePoint }} \
           -e environment=${{ github.event.inputs.TargetEnvironment }} \
           -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }}
