--- a/common/tasks/emcli_login.yml
+++ b/common/tasks/emcli_login.yml
@@ -20,45 +20,49 @@
     fail_msg: >
       The variable oem_sysman_password must be defined and non-empty. Ensure it's passed in, or fetched by get_facts.yml.
 
-- name: Write SYSMAN password to a hidden temp file
-  copy:
-    content: "{{ oem_sysman_password }}"
-    dest: "/tmp/.emcli_password"
-    mode: '0600'
-  become: true
-  become_user: "oracle"
-  no_log: true
+- name: EMCLI login with password cleanup
+  block:
+    - name: Write SYSMAN password to a hidden temp file
+      copy:
+        content: "{{ oem_sysman_password }}"
+        dest: "/tmp/.emcli_password"
+        mode: '0600'
+      become: true
+      become_user: "oracle"
+      no_log: true
 
-- name: Perform EMCLI login if needed
-  ansible.builtin.shell: |
-    . ~/.bash_profile
-    EMCLI={{ emcli }}
-    SYSMAN_PASSWORD=$(< /tmp/.emcli_password)
-    rm -f /tmp/.emcli_password
-    $EMCLI sync > /dev/null 2>&1
-    if [[ $? -gt 0 ]]; then
-      echo "$SYSMAN_PASSWORD" | $EMCLI login -username=sysman -force
-      unset SYSMAN_PASSWORD
-      RC=$?
-      if [[ $RC -gt 0 ]]; then
-        exit $RC
-      fi
-      $EMCLI sync
-      echo "Logged in."
-    fi
-  environment:
-    JAVA_HOME: "{{ oracle_home }}/jdk/jre"
-    ORACLE_HOME: "{{ oracle_home }}"
-  become: true
-  become_user: "oracle"
-  register: emcli_login_result
-  failed_when: emcli_login_result.rc != 0
-  no_log: true
+    - name: Perform EMCLI login if needed
+      ansible.builtin.shell: |
+        . ~/.bash_profile
+        export JAVA_HOME=$ORACLE_HOME/jdk/jre
+        EMCLI={{ emcli }}
+        SYSMAN_PASSWORD=$(< /tmp/.emcli_password)
+        rm -f /tmp/.emcli_password
+        $EMCLI sync > /dev/null 2>&1
+        if [[ $? -gt 0 ]]; then
+          echo "$SYSMAN_PASSWORD" | $EMCLI login -username=sysman -force
+          unset SYSMAN_PASSWORD
+          RC=$?
+          if [[ $RC -gt 0 ]]; then
+            exit $RC
+          fi
+          $EMCLI sync
+          echo "Logged in."
+        fi
+      environment:
+        JAVA_HOME: "{{ oracle_home }}/jdk/jre"
+        ORACLE_HOME: "{{ oracle_home }}"
+      become: true
+      become_user: "oracle"
+      register: emcli_login_result
+      failed_when: emcli_login_result.rc != 0
+      no_log: true
 
-- name: Ensure temp password file is deleted (cleanup)
-  file:
-    path: /tmp/.emcli_password
-    state: absent
-  become: true
-  become_user: "oracle"
-  ignore_errors: true
+  always:
+    - name: Ensure temp password file is deleted (cleanup)
+      file:
+        path: /tmp/.emcli_password
+        state: absent
+      become: true
+      become_user: "oracle"
+      ignore_errors: true
