Dba 791 replace use of environment variables for password passing in ansible scripts (#596)
* DBA-791

Remove emcli_login.sh usage as it stores the password in the script. Added a more secure method by adding a new common task that can be called instead, although not in the same way as bash script within tasks. It should be called at the start of a block that has tasks calling emcli.

* DBA-791

Add missing no_log to tasks

* Update script_exclusion.yml

minor fix

* Update oracle-db-oem-blackout.yml

minor fix

* Update oracle-db-oem-blackout.yml

minor fix

* DBA-791

Ensure common is added to workflows where the common emcli_login task will be called

* Update oracle-db-release-update.yml

Resolve conflict

* Commit changes made by code formatters

* Update emcli_login.yml

Write SYSMAN password to a hidden temp file. Perform EMCLI login using the temp file and remove it immediately.

* Commit changes made by code formatters

* Update emcli_login.yml

Add tasks into a block so removing the temp file is always run even if there's an error

* Commit changes made by code formatters

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/oracle-db-release-update.yml
+++ b/.github/workflows/oracle-db-release-update.yml
@@ -169,7 +169,7 @@ jobs:
                            playbooks/delius_oem_metrics_setup
                            playbooks/oracle_interim_patch
                            playbooks/oracle_ha
-                           common/*
+                           common
                            ansible.cfg
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
