Fixed path for emcli_login.yml

--- a/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
@@ -128,7 +128,7 @@
       include_tasks: get_facts.yml
 
     - name: Ensure EMCLI session is ready
-      include_tasks: "operations/common/tasks/emcli_login.yml"
+      include_tasks: "{{ playbook_dir }}/../../common/tasks/emcli_login.yml"
 
     - name: Update Host Comment Property With Excluded Host
       shell: |
